# high-precision

./: CMakeLists.txt  README.md  README_CN.md  main.cpp
BigInteger/: CmakeLists.txt
BigInteger/include/BigInteger/: biginteger.h
BigInteger/src/: biginteger.cpp
doc/: README.md
